--- a/tasks/SR/config.yaml
+++ b/tasks/SR/config.yaml
@@ -1,17 +1,12 @@
-name: RealESRGAN_FastMRI
+name: SRRESUNET_FastMRI
 seed: 1234
 track: &track True
 script_path: /home/nvidia/Projects/Expe/FastMRI/SRFastMRI
 scaling_factor: &scaling_factor 2
 model:
-  class_name: RealESRGAN
+  class_name: SRResUNet
   module_name: src.models.super_resolution
   parameters:
-    in_channels: 1
-    out_channels: 1
-    num_features: 48
-    num_blocks: 16
-    upscale_factor: *scaling_factor
 
 dataloader:
   class_name: SRKneeMRILoader
@@ -20,7 +15,7 @@ dataloader:
     train_data_dir: /home/nvidia/Projects/Datasets/fastmri/singlecoil_train/
     val_data_dir: /home/nvidia/Projects/Datasets/fastmri/singlecoil_val/
     lr_image_scale: *scaling_factor
-    batch_size: 8
+    batch_size: 16
     num_workers: 8
     debug: False
 
@@ -32,16 +27,18 @@ trainer:
     early_stopping_patience: 10
     lr_scheduler: plateau
     lr: 0.00002
-    weight_decay: 0.00001
+    weight_decay: 0
     track: *track
     loss:
       module_name: src.optimisation.losses
-      class_name: L1MSSIMLoss
+      class_name: SRLoss
       parameters:
-        alpha: 0.84
     metric:
       - module_name: torchmetrics.image
         class_name: PeakSignalNoiseRatio
+        parameters:
+      - module_name: torchmetrics.image
+        class_name: StructuralSimilarityIndexMeasure
         parameters:
 
 experiment:
