--- a/tasks/SR/config.yaml
+++ b/tasks/SR/config.yaml
@@ -1,18 +1,16 @@
-name: RRDBNet_FastMRI
+name: FSRCNN_FastMRI
 seed: 1234
 track: &track True
 script_path: /home/nvidia/Projects/Expe/FastMRI/SRFastMRI
 scaling_factor: &scaling_factor 2
 model:
-  class_name: RRDBNet
+  class_name: FSRCNN
   module_name: src.models.super_resolution
   parameters:
-    in_channels: 1 
-    out_channels: 1
-    num_features: 64
-    growth_channels: 32
-    upscale_factor: *scaling_factor
-    n_blocks: 3
+    scale_factor: *scaling_factor
+    d: 56
+    s: 12
+    m: 4
 
 dataloader:
   class_name: SRKneeMRILoader
@@ -21,7 +19,7 @@ dataloader:
     train_data_dir: /home/nvidia/Projects/Datasets/fastmri/singlecoil_train/
     val_data_dir: /home/nvidia/Projects/Datasets/fastmri/singlecoil_val/
     lr_image_scale: *scaling_factor
-    batch_size: 8
+    batch_size: 16
     num_workers: 8
     debug: False
 
@@ -36,10 +34,12 @@ trainer:
     weight_decay: 0.0
     track: *track
     loss:
-      class_name: L1MSSIMLoss
+      class_name: EPFLoss
       module_name: src.optimisation.losses
       parameters:
-          alpha: 0.84
+          lambda_1: 0.7
+          lambda_2: 0.3
+          lambda_3: 1
     metric:
       - module_name: torchmetrics.image
         class_name: PeakSignalNoiseRatio
